@@ -28,6 +28,8 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.nuxeo.data.gen.BaseBankTemplate;
 import org.nuxeo.data.gen.pdf.PDFTemplateGenerator;
 
@@ -94,7 +96,7 @@ public class ITextNXBankTemplateCreator extends BaseBankTemplate implements PDFT
 		initOperations();
 
 		if (in != null) {
-			img = ImageDataFactory.create(in.readAllBytes());
+			img = ImageDataFactory.create(IOUtils.toByteArray(in));
 		}
 	}
 
@@ -116,7 +118,7 @@ public class ITextNXBankTemplateCreator extends BaseBankTemplate implements PDFT
 				.setBold().add(new Text("\n" + key(2))).setFontSize(14).setBold().add(new Text("\n" + key(3)))
 				.setFontSize(14).setBold());
 		document.add(new Paragraph().setTextAlignment(TextAlignment.RIGHT).setMultipliedLeading(1)
-				.add(new Text(ACCOUNT_LABEL + key(5) + " ".repeat(5))).setFontSize(14).setBold().add("\n" + key(4)));
+				.add(new Text(ACCOUNT_LABEL + key(5) + StringUtils.repeat(" ", 5))).setFontSize(14).setBold().add("\n" + key(4)));
 		
 		LineSeparator sep = new LineSeparator(new SolidLine());
 		document.add(sep);
